--- a/Homeshow.html/mylogin.html
+++ b/Homeshow.html/mylogin.html
@@ -136,7 +136,7 @@
 
     </div>
 
-    <footer>
+    <div class="footer">
       
       <div class="images-div">
         <div><img class="footer-pics" src="../images/images (16).jpg" alt=""></div>
@@ -207,7 +207,7 @@
                  
           </div>
       </div>
-      </footer>
+      </d>
 
 
 
