--- a/Homeshow.html/productTable.html
+++ b/Homeshow.html/productTable.html
@@ -227,7 +227,7 @@
       </div>
 
 
-      <footer>
+      <div class="footer">
       
         <div class="images-div">
           <div><img class="footer-pics" src="../images/images (16).jpg" alt=""></div>
@@ -301,6 +301,6 @@
             
             </div>
         </div>
-        </footer>
+        </div>
 </body>
 </html>
